[package]
name = "cdnx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dns-lookup = "2.0.4"
ipnetwork = "0.20.0"
regex = "1.10.4"
reqwest = { version = "0.11", features = ["blocking"] }
serde_yaml = "0.9.34"
tokio = { version = "1", features = ["full"] }
trust-dns-resolver = "0.22.0"